--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -7,6 +7,7 @@ on:
   workflow_dispatch: # Allow manual triggering
   push:
     branches:
+      - master
       - test
     paths:
       - "CONTRIBUTE_README.md"
@@ -47,7 +48,7 @@ jobs:
 
       - name: Run README generation workflow
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PAT: ${{ secrets.PAT }}
         run: |
           java --enable-preview --source 25 scripts/run_workflow.java
 
@@ -55,9 +56,9 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add README.md
+          git add -f README.md
           # Always commit the stats cache so it persists for next run
-          git add .tmp/github-stats.txt || true
+          git add -f .tmp/github-stats.txt || true
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
